--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -14,11 +14,11 @@
   }
   .search-btn i{
     display: inline;
-    margin-right: 0.5rem;
+    margin-right: 0.2rem;
   }
   .search-inp{
     border-radius: 25px;
-    padding: 3px 25px;
+    padding: 3px 20px;
   }
 </style>
 
@@ -34,11 +34,25 @@
       </div>
 
       <div class="navbar-nav ms-auto">
-        <form class="d-flex" role="search">
-        <input class="form-control me-2 search-inp" type="search" placeholder="Search destination" aria-label="Search"/>
-        <button class="btn search-btn" type="submit"><i class="fa-solid fa-magnifying-glass"></i>Search</button>
-    </form>
+        <form class="d-flex" action="/listings/search" method="GET" role="search">
+          <input class="form-control me-2 search-inp"  name="query" type="search" placeholder="Search destination" aria-label="Search"/>
+          <button class="btn search-btn" type="submit"><i class="fa-solid fa-magnifying-glass"></i>Search</button>
+        </form>
       </div>
+
+<!-- <form class="d-flex" action="/listings/search" method="GET">
+    <input 
+        class="form-control me-2"
+        type="search"
+        name="query"
+        placeholder="Search country or location"
+        aria-label="Search"
+    >
+    <button class="btn btn-outline-success" type="submit">Search</button>
+</form> -->
+
+
+
 
       <div class="navbar-nav ms-auto">
         <a class="nav-link" href="/listings/new">Airbnb your home</a>
